[package]
name = "codegen"
version = "0.1.0"
edition = "2021"
authors = ["Seun Lanlege <seunlanlege@gmail.com>"]

[[bin]]
name = "codegen"
path = "bin/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
serde_json = { workspace = true }
http = { workspace = true }
subxt-codegen = { workspace = true }
subxt-metadata = { workspace = true }
jsonrpsee = { workspace = true , features = [
    "async-client",
    "client-ws-transport-no-tls",
    "http-client",
] }
syn = { workspace = true }
parity-scale-codec = { workspace = true, default-features = false, features = [
    "derive",
    "max-encoded-len",
] }
hex = { workspace = true }
wasm-testbed = { workspace = true }
